# optitag

./: Cargo.toml  README.md
src/: main.rs
src/commands/: clear.rs  get.rs  mod.rs  query.rs  tag.rs  untag.rs
