[package]
name = "optitag"
repository = "https://github.com/mhvsa/optitag"
readme = "README.md"
version = "0.3.0"
edition = "2021"
authors = ["Michał Sabiniarz <michal.sabiniarz@gmail.com>"]
description = "A simple command-line tool for tagging files"
categories = ["command-line-utilities", "filesystem"]
license = "MIT"

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
dirs = "5.0.0"
sled = "0.34.7"
